tests/resources/errors/errors_destructors9.ac
import std;
import std.Error;

struct TestError :: *Error {
    const fn get_name() -> const char* {
        return "TestError";
    }
    const fn get_message() -> const char* {
        return "error raised!";
    }
}

fn write_val(val: int) {

#if OS_GROUP_WINDOWS
    handle: void* = std.GetStdHandle(-11);
    written: uint32;
    c: char = as(char) val;
    std.WriteFile(handle, &c, 1, &written, null);
#elif OS_GROUP_UNIX
    c: char = as(char) val;
    std.write(1, &c, 1);
#endif

}

struct A {
    v: int;

    fn delete() {
        std.print("~A called!");
    }
}

fn foo(b: bool) -> A | raises TestError {
    if b {
        raise TestError{};
    } else {
        return A{ 64 };
    }
}

fn main() {
    v1: int = try foo(false).v {
        std.print("caught error!");
        recover 94;
    };
    write_val(v1);
    std.print("...");
    v2: int = try foo(true).v { // it should not destroy A in this case!
        std.print("caught error!");
        recover 94;
    };
    write_val(v2);
}